Form - list - menu is overlapped if there is only one item issue done

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -189,6 +189,8 @@
 
   .contact-list-area {
     .contact-list-table {
+      overflow-x: visible;
+      
       table {
         thead,
         tbody {
